games display and can click to add to user favorite (but not logged in, only hard code user atm)

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@
   /*width: 20%;*/
 }
 
+.games {
+  display: inline-block;
+  margin: 20px;
+  padding: 20px;
+  border: 2px solid black;
+  width: 15%;
+  height: ;
+}
+
 /*.head {
   width: 100%;
   background-color: orange;
